# tulflow

./: .gitignore  .gitmodules  .travis.yml  Makefile  Pipfile  README.md  pylintrc  pyproject.toml  setup.py  verify_version.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build-distribution.yml  lint-test.yml  workflow-failure-notify.yml
scripts/: airflow-update.sh
tests/: __init__.py  test_devo-256_lxml_bug.py  test_harvest.py  test_process.py  test_solr_api_utils.py  test_tasks.py  test_transform.py  test_validate.py
tests/fixtures/: alma_bibs__boundwith_new_1.xml  alma_bibs__new_1.xml  alma_bibs__new_1_ns.xml  devo-265-failing-record.xml  record_001.xml  record_001_dup.xml  record_001_empty.xml  record_001_missing.xml  sch-oai-empty.xml  sch-oai-invalid.xml  sch-oai-mix.xml  sch-oai-valid.xml  sch-sample.sch  temple.xsl  xsl-sample-complex-output-all.xml  xsl-sample-complex-output-record1.xml  xsl-sample-complex-output-record2.xml  xsl-sample-complex-output-record3.xml  xsl-sample-complex-output.xml  xsl-sample-complex.xsl  xsl-sample-simple-output-all.xml  xsl-sample-simple-output-record1.xml  xsl-sample-simple-output-record2.xml  xsl-sample-simple-output-record3.xml  xsl-sample-simple.xsl  xsl-sample.xml
tulflow/: _version.py  harvest.py  process.py  solr_api_utils.py  tasks.py  transform.py  validate.py
tulflow/cleanup/: __init__.py  renamemarcfiles.py
tulflow/harvest/: alma_oai.py
tulflow/process/: parsesftpdump.py  processdeletes.py
tulflow/tasks/: slackpostfail.py  slackpostsuccess.py
