[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tulflow"
description = "Package of Temple University Library Indexing & ETL functions used by Airflow."
readme = "README.md"
license = {text = "Apache License (2.0)"}
authors = [
    {name = "Temple University Libraries", email = "tul08567@temple.edu"}
]
urls = {homepage = "https://github.com/tulibraries/tulflow"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "nose",
]
dynamic = ["version"] 

[project.scripts]
verify-version = "verify_version:verify_version"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "tulflow/_version.py"
fallback_version = "0.0.0"