[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tulflow"
description = "Package of Temple University Library Indexing & ETL functions used by Airflow."
readme = "README.md"
license = { text = "Apache License (2.0)" }
authors = [
    { name = "Temple University Libraries", email = "tuh42082@temple.edu" }
]
urls = { homepage = "https://github.com/tulibraries/tulflow" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "nose",
]
dynamic = ["version"]

# (verify-version script removed; version comes from git tags via setuptools_scm)

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
# write version file for runtime access (optional)
write_to = "tulflow/_version.py"
fallback_version = "0.0.0"
